# asiae-BOK-nlp

./: .gitignore  01_gathering_data.ipynb  02_convert_data_to_text_format.ipynb  03_preprocessing_bok_call_rates.ipynb  03_preprocessing_text_data(old).ipynb  03_preprocessing_text_data-mp.ipynb  03_preprocessing_text_data.ipynb  04_polarity_dictionary.ipynb  05_calculating_minutes_tone.ipynb  JPype1-0.7.1-cp37-cp37m-win_amd64.whl  preprocessing_mp_worker.py  pyproject.toml  test_installations.ipynb
data_files/: BOK_2.6._base_rate.csv  BOK_4.1.1_market_call_rate_-_daily.csv
