[tool.poetry]
name = "asiae-BOK-nlp"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"
mecab_python = {file = "./mecab_python-0.996_ko_0.9.2_msvc-cp37-cp37m-win_amd64.whl"}
JPype1 = {file = "./JPype1-0.7.1-cp37-cp37m-win_amd64.whl"}
konlpy = "^0.5.2"
nltk = "^3.4.5"
gensim = "^3.1"
scipy = "^1.4.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
